; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_sdvo.c_intel_sdvo_enable_hotplug.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_sdvo.c_intel_sdvo_enable_hotplug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_encoder = type { i32 }
%struct.intel_sdvo = type { i32 }

@SDVO_CMD_SET_ACTIVE_HOT_PLUG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_encoder*)* @intel_sdvo_enable_hotplug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_sdvo_enable_hotplug(%struct.intel_encoder* %0) #0 {
  %2 = alloca %struct.intel_encoder*, align 8
  %3 = alloca %struct.intel_sdvo*, align 8
  store %struct.intel_encoder* %0, %struct.intel_encoder** %2, align 8
  %4 = load %struct.intel_encoder*, %struct.intel_encoder** %2, align 8
  %5 = getelementptr inbounds %struct.intel_encoder, %struct.intel_encoder* %4, i32 0, i32 0
  %6 = call %struct.intel_sdvo* @to_intel_sdvo(i32* %5)
  store %struct.intel_sdvo* %6, %struct.intel_sdvo** %3, align 8
  %7 = load %struct.intel_sdvo*, %struct.intel_sdvo** %3, align 8
  %8 = load i32, i32* @SDVO_CMD_SET_ACTIVE_HOT_PLUG, align 4
  %9 = load %struct.intel_sdvo*, %struct.intel_sdvo** %3, align 8
  %10 = getelementptr inbounds %struct.intel_sdvo, %struct.intel_sdvo* %9, i32 0, i32 0
  %11 = call i32 @intel_sdvo_write_cmd(%struct.intel_sdvo* %7, i32 %8, i32* %10, i32 2)
  ret void
}

declare dso_local %struct.intel_sdvo* @to_intel_sdvo(i32*) #1

declare dso_local i32 @intel_sdvo_write_cmd(%struct.intel_sdvo*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
